# cc-extract-rs

./: .gitignore  Cargo.toml  upload.py
src/: clean_seq.rs  main.rs
