[package]
name = "cc-clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
async-compression = { version = "0.4.11", features = ["zstd", "tokio", "gzip"] }
json = "0.12.4"
num_cpus = "1.16.0"
once_cell = "1.19.0"
regex = "1.10.5"
tokio = { version = "1.38.0", features = ["full"] }
